--- a/static/styles.css
+++ b/static/styles.css
@@ -4,9 +4,10 @@
 	--button-bg-color: #263238;
 	--button-hover-bg-color: #37474f;
 	--box-bg-color: #333333;
-	--border-color: #555;
+	--border-color: #37474f;
 	--header-bg-color: #1a1a1a;
 	--row-hover-color: #404040;
+	--input-bg-color: #222222;
 }
 
 body {
@@ -14,38 +15,79 @@ body {
 	background-color: var(--background-color);
 	color: var(--text-color);
 	margin: 0;
-	padding: 20px;
+	padding: 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	min-height: 100vh;
+	font-size: 16px;
 }
 
 button,
 input[type='file'],
 select,
 input[type='text'] {
-	padding: 10px;
-	margin: 10px 5px;
-	border-radius: 5px;
-	border: 1px solid var(--border-color);
-	background-color: var(--button-bg-color);
+	padding: 12px 20px;
+	margin: 10px;
+	border-radius: 4px;
+	border: none;
+	background-color: var(--input-bg-color);
 	color: var(--text-color);
 	font-size: 16px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.24), 0 1px 5px rgba(0, 0, 0, 0.19);
+	transition: box-shadow 0.3s;
 }
 
-button:hover {
+button:hover,
+button:focus,
+input[type='file']:hover,
+select:hover,
+input[type='text']:hover {
+	background-color: var(--button-hover-bg-color);
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.24), 0 1px 18px rgba(0, 0, 0, 0.19);
+}
+
+.menu {
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: var(--header-bg-color);
+	width: 100%;
+	padding: 10px 20px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+	z-index: 1000;
+}
+
+.menu-button {
+	font-size: 24px;
+	background: none;
+	border: none;
+	color: var(--text-color);
+	cursor: pointer;
+}
+
+.menu-content a {
+	display: block;
+	padding: 12px 20px;
+	color: var(--text-color);
+	text-decoration: none;
+	font-size: 18px;
+	transition: background-color 0.3s;
+}
+
+.menu-content a:hover {
 	background-color: var(--button-hover-bg-color);
 }
 
-#registerLectureTab,
-#historyTab {
+.content {
+	margin-top: 60px;
 	width: 90%;
 	max-width: 960px;
 	padding: 20px;
-	border: 2px solid var(--border-color);
-	margin-top: 20px;
+	border-radius: 8px;
 	background: var(--box-bg-color);
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+	overflow: hidden;
 }
 
 #historyList {
@@ -75,22 +117,80 @@ button:hover {
 	top: 0;
 }
 
-@media (min-width: 768px) {
-	.content-wrapper {
-		flex-direction: row;
+/* Responsive Design */
+@media (max-width: 768px) {
+	body {
+		font-size: 14px;
 	}
 
-	.image-container,
-	.data-container {
-		width: 50%;
-		margin: 0 10px;
-		height: 250px;
-	}
-
-	input[type='text'],
+	button,
+	input[type='file'],
 	select,
-	button {
-		margin-top: 0;
-		margin-right: 10px;
+	input[type='text'] {
+		padding: 10px;
+		font-size: 14px;
+	}
+
+	.menu-button {
+		margin-left: 10px;
+	}
+
+	.menu-content a {
+		padding: 10px;
+		font-size: 16px;
+	}
+
+	.content {
+		width: 100%;
+		margin-top: 50px;
+		padding: 15px;
+	}
+
+	#historyList th,
+	#historyList td {
+		padding: 8px;
+	}
+
+	/* Transforming the table for mobile view */
+	#historyList,
+	#historyList thead,
+	#historyList tbody,
+	#historyList th,
+	#historyList td,
+	#historyList tr {
+		display: block;
+	}
+
+	#historyList thead tr {
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+
+	#historyList tr {
+		border: 1px solid var(--border-color);
+		margin-bottom: 5px;
+		box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+		padding: 10px;
+		background-color: var(--box-bg-color);
+	}
+
+	#historyList td {
+		border: none;
+		position: relative;
+		padding-left: 50%;
+		text-align: right;
+		margin-bottom: 10px;
+	}
+
+	#historyList td:before {
+		content: attr(data-label);
+		position: absolute;
+		left: 10px;
+		width: 45%;
+		padding-right: 10px;
+		text-align: left;
+		font-weight: bold;
+		color: var(--text-color);
 	}
 }
