--- a/static/styles.css
+++ b/static/styles.css
@@ -1,197 +1,320 @@
-:root {
-	--background-color: #121212;
-	--text-color: #e0e0e0;
-	--button-bg-color: #263238;
-	--button-hover-bg-color: #37474f;
-	--box-bg-color: #333333;
-	--border-color: #37474f;
-	--header-bg-color: #1a1a1a;
-	--row-hover-color: #404040;
-	--input-bg-color: #222222;
-}
-
-body {
-	font-family: 'Roboto', sans-serif;
-	background-color: var(--background-color);
-	color: var(--text-color);
+body,
+html {
 	margin: 0;
 	padding: 0;
+	height: 100%;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.container {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+}
+
+.top,
+.middle,
+.bottom {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+/******************** TOP SECTION ********************/
+.top {
+	display: flex;
+	flex-direction: column;
+	height: 20vh;
+	background-color: white;
+}
+
+.circle {
+	width: 100px;
+	height: 100px;
+	background-image: url('logo.png');
+	background-size: 100%;
+	background-position: center;
+	border-radius: 50%;
+	display: flex;
+}
+
+.title {
+	font-size: 10px;
+}
+
+/******************** MIDDLE SECTION ********************/
+.middle {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	min-height: 100vh;
-	font-size: 16px;
+	justify-content: center;
+	height: 65vh; /* Adjust height to fill the available space */
+	background-color: white;
 }
 
-button,
-input[type='file'],
-select,
-input[type='text'] {
-	padding: 12px 20px;
-	margin: 10px;
-	border-radius: 4px;
-	border: none;
-	background-color: var(--input-bg-color);
-	color: var(--text-color);
-	font-size: 16px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.24), 0 1px 5px rgba(0, 0, 0, 0.19);
-	transition: box-shadow 0.3s;
+.fade-out {
+	animation: fadeOut 0.4s forwards; /* Animation to fade the content out */
 }
 
-button:hover,
-button:focus,
-input[type='file']:hover,
-select:hover,
-input[type='text']:hover {
-	background-color: var(--button-hover-bg-color);
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.24), 0 1px 18px rgba(0, 0, 0, 0.19);
+.fade-in {
+	animation: fadeIn 0.4s forwards; /* Animation to fade the content in */
 }
 
-.menu {
-	position: fixed;
-	top: 0;
-	left: 0;
-	background-color: var(--header-bg-color);
+@keyframes fadeOut {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+	}
+}
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+#content-area {
+	opacity: 1; /* Start fully visible */
+}
+
+/* SVG filter for the gooey effect */
+.svg-filters {
+	position: absolute;
+	width: 0;
+	height: 0;
+}
+
+/* SCAN BOX */
+.home-icon {
 	width: 100%;
-	padding: 10px 20px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-	z-index: 1000;
 }
 
-.menu-button {
-	font-size: 24px;
-	background: none;
-	border: none;
-	color: var(--text-color);
+.scan-container {
+	width: 100%; /* Ensures the container uses the full width */
+	display: flex;
+	flex-direction: column;
+	align-items: center; /* Centers the children horizontally */
+	justify-content: center;
+	margin-top: -60px;
+	position: relative; /* Add position relative */
+}
+
+.scan {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #fff; /* White background for a clean look */
+	width: 210px;
+	height: 210px;
+	border-radius: 15%; /* Slightly more rounded corners for a softer look */
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.19); /* Subtle shadow for depth */
+	overflow: hidden;
+	position: relative;
+	margin-top: 50px;
+	transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions for interactions */
+}
+
+.scan:hover {
+	transform: scale(1.05); /* Slight scale up on hover for a tactile feel */
+	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2), 0 12px 24px rgba(0, 0, 0, 0.28); /* Deeper shadow for a "lifting" effect */
+}
+
+/* OPTIONS */
+.attendance-options {
+	display: flex;
+	flex-direction: column; /* Stack children vertically */
+	align-items: center; /* Center-align the children */
+	width: 90%; /* Adjust width as needed to fit within the parent container */
+	margin: 20px auto; /* Center horizontally and add space above and below */
+}
+
+/* Move the label containing the image to the center */
+label {
+	display: flex;
+	justify-content: center;
+}
+
+.options {
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+
+.radio-option {
+	display: flex;
+	align-items: center;
+	margin: 0 15px;
+	font-size: 18px;
+	color: #343434; /* Slightly lighter text color for contrast */
+	position: relative;
 	cursor: pointer;
 }
 
-.menu-content a {
-	display: block;
-	padding: 12px 20px;
-	color: var(--text-color);
-	text-decoration: none;
-	font-size: 18px;
-	transition: background-color 0.3s;
+.radio-option input[type='radio'] {
+	appearance: none;
+	width: 24px;
+	height: 24px;
+	margin-right: 10px;
+	border: 2px solid #bbb; /* Lighter border color for a more subtle look */
+	border-radius: 50%;
+	outline: none;
+	transition: border 0.3s ease;
+	background: #fff; /* White background for a clean appearance */
 }
 
-.menu-content a:hover {
-	background-color: var(--button-hover-bg-color);
+.radio-option input[type='radio']:checked {
+	background-color: #9badbf; /* Blue color for a checked state */
+	border-color: #9badbf; /* Matching border color */
+	animation: pulse 1s infinite;
 }
 
-.content {
-	margin-top: 60px;
-	width: 90%;
-	max-width: 960px;
-	padding: 20px;
-	border-radius: 8px;
-	background: var(--box-bg-color);
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-	overflow: hidden;
-	display: hidden;
+.radio-option input[type='radio']:hover {
+	border-color: #999; /* Darken border on hover */
 }
 
-.table-style {
-	width: 100%;
-	border-collapse: collapse;
+.radio-option input[type='radio']:checked:after {
+	content: '';
+	position: absolute;
+	left: 4px;
+	top: 4px;
+	width: 12px;
+	height: 12px;
+	background-color: white;
+	border-radius: 50%;
+	transition: width 0.3s ease, height 0.3s ease;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(1);
+	}
+	50% {
+		transform: scale(1.1);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+
+.lecture-dropdown {
 	margin-top: 20px;
+	padding: 8px 12px;
+	border-radius: 5px;
+	width: 80%; /* Adjusted width for better visual balance */
+	height: 40px;
+	background-color: #fff; /* White background for a clean, modern look */
+	border: 2px solid #bbb; /* Subtle border color matching the radio buttons */
+	color: #343434; /* Text color matching the radio button labels */
+	font-size: 16px; /* Slightly increased font size for better readability */
+	transition: all 0.3s ease; /* Smooth transition for interactive effects */
+	appearance: none; /* Remove default system styling */
+	cursor: pointer; /* Pointer cursor on hover */
 }
 
-.table-style th,
-.table-style td {
-	text-align: left;
-	padding: 12px 15px;
-	border-bottom: 1px solid var(--border-color);
+.lecture-dropdown:hover,
+.lecture-dropdown:focus {
+	border-color: #999; /* Darken border on hover/focus for better feedback */
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
 
-.table-style thead {
-	background-color: var(--header-bg-color);
-	color: var(--text-color);
+.lecture-dropdown:active {
+	background-color: #ececec; /* Slightly darker background on click */
 }
 
-.table-style tbody tr:hover {
-	background-color: var(--row-hover-color);
+/* Custom arrow styling for dropdown */
+.lecture-dropdown {
+	background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+		linear-gradient(135deg, gray 50%, transparent 50%);
+	background-position: right 15px top 17px, right 10px top 17px;
+	background-size: 5px 5px, 5px 5px;
+	background-repeat: no-repeat;
 }
 
-.table-style th {
-	position: sticky;
-	top: 0;
+.lecture-dropdown option {
+	padding: 8px 10px; /* Padding for options for better readability */
 }
 
-/* Responsive Design */
-@media (max-width: 768px) {
-	body {
-		font-size: 14px;
-		margin: 5%;
-	}
+.submit-btn {
+	margin-top: 15px;
+	padding: 10px 20px;
+	font-size: 16px;
+	color: white;
+	background-color: #343434;
+	border: none;
+	border-radius: 80px;
+	width: 200px;
+	cursor: pointer;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.19); /* Shadow for depth */
+	margin-top: 20px;
+	margin-bottom: -50px;
+}
 
-	button,
-	input[type='file'],
-	select,
-	input[type='text'] {
-		padding: 10px;
-		font-size: 14px;
-	}
+.submit-btn:hover {
+	background-color: #686868;
+}
 
-	.menu-button {
-		margin-left: 10px;
-	}
+/* LAST ENTRY */
+.last-entry {
+	display: block;
+	width: 90%;
+	height: 80px;
+	padding: 10px;
+	background-color: rgb(217, 219, 225);
+	border-radius: 10px;
+	text-align: center;
+	justify-content: center;
+	margin-top: 60px;
+}
 
-	.menu-content a {
-		padding: 10px;
-		font-size: 16px;
-	}
+/******************** BOTTOM SECTION ********************/
+.bottom {
+	height: 15vh;
+	background-color: #9badbf; /* This sets the color of the bottom div */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative; /* Ensures the nav bar is positioned relative to the bottom div */
+	width: 100%; /* Ensures it spans the full width of its parent */
+}
 
-	.content {
-		width: 100%;
-		margin-top: 50px;
-		padding: 15px;
-	}
+.nav-bar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute; /* Positioned absolutely within the relative .bottom div */
+	bottom: 0;
+	left: 0;
+	width: 100%; /* Match the width of the .bottom div */
+	height: 100%; /* Take up the full height of the .bottom div */
+	background-color: transparent; /* Make the background transparent */
+}
 
-	.table-style th,
-	.table-style td {
-		padding: 8px;
-	}
+.nav-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: transparent;
+	width: 65px; /* Adjust size as needed */
+	height: 65px; /* Adjust size as needed */
+	border-radius: 10%; /* Rounded corners like the scan class */
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.19); /* Shadow for depth */
+	overflow: hidden;
+	position: relative;
+	margin: 11px;
+	margin-bottom: 25px;
+}
 
-	.table-style,
-	.table-style thead,
-	.table-style tbody,
-	.table-style th,
-	.table-style td,
-	.table-style tr {
-		display: block;
-	}
+.nav-button img {
+	width: 30px;
+	height: 30px; /* Adjust icon size */
+}
 
-	.table-style thead tr {
-		position: absolute;
-		top: -9999px;
-		left: -9999px;
-	}
-
-	.table-style tr {
-		border: 1px solid var(--border-color);
-		margin-bottom: 5px;
-		box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-		padding: 10px;
-		background-color: var(--box-bg-color);
-	}
-
-	.table-style td {
-		border: none;
-		position: relative;
-		padding-left: 50%;
-		text-align: right;
-		margin-bottom: 10px;
-	}
-
-	.table-style td:before {
-		content: attr(data-label);
-		position: absolute;
-		left: 10px;
-		width: 45%;
-		padding-right: 10px;
-		text-align: left;
-		font-weight: bold;
-		color: var(--text-color);
-	}
+.nav-button.selected {
+	background-color: #c8d0d8; /* A slightly different color to indicate selection */
 }
