--- a/static/styles.css
+++ b/static/styles.css
@@ -272,6 +272,66 @@ label {
 	margin-top: 60px;
 }
 
+/***** LECTURES PAGE *****/
+.lectures-page {
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	height: 65vh;
+}
+
+.lecture-form {
+	flex-direction: column;
+	width: 80%;
+	background: #bbb;
+	margin: auto;
+	padding: 20px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	border-radius: 15px;
+}
+
+.lecture-form h1 {
+	font-size: 15pt;
+	text-align: center;
+	margin: 1px;
+}
+
+.input-group {
+	margin-bottom: 10px;
+}
+
+.input-group label {
+	display: block;
+	font-size: 18px;
+	color: #343434;
+}
+
+.form-input {
+	width: 90%;
+	padding: 8px 10px;
+	margin-top: 5px;
+	border-radius: 5px;
+	border: 2px solid #bbb;
+	font-size: 16px;
+}
+
+.submit-btn {
+	margin-top: 15px;
+	padding: 10px 20px;
+	font-size: 16px;
+	color: white;
+	background-color: #343434;
+	border: none;
+	border-radius: 80px;
+	width: 100%;
+	cursor: pointer;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.19);
+}
+
+.submit-btn:hover {
+	background-color: #686868;
+}
+
 /******************** BOTTOM SECTION ********************/
 .bottom {
 	height: 15vh;
