--- a/static/styles.css
+++ b/static/styles.css
@@ -251,6 +251,45 @@ label {
 	margin-top: 60px;
 }
 
+/* HISTORY PAGE */
+.history-page {
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	height: 65vh;
+	overflow-y: auto; /* Scroll only within the history page */
+}
+
+.history-card {
+	display: flex;
+	flex-direction: column;
+	width: 80%;
+	margin: 10px;
+	padding: 20px;
+	background-color: #f9f9f9;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	border-radius: 10px;
+}
+
+.history-info {
+	font-size: 14px;
+	color: #333;
+}
+
+.no-history {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100%; /* Take full height of its container */
+	text-align: center;
+}
+
+.no-history-text {
+	font-size: 18px;
+	color: #686868;
+}
+
 /* LECTURES PAGE */
 .lectures-page {
 	flex-direction: column;
